Router till configuring routes

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -139,4 +139,16 @@
     </li>
   </ul>
   <!-- try hands on frmtng phn no., hglght srch rslt kywrd-->
- <router-outlet></router-outlet>
+
+<!--Router-->
+<br>
+<h6>Router Example</h6>
+
+<ul>
+  <li><a href="/products">Products</a></li>
+  <li><a href="/product-view">Products View</a></li>
+  <li><a href="/product-edit">Products Edit</a></li>
+</ul>
+<div class="">
+  <router-outlet></router-outlet>
+</div>
