--- a/src/app/signin/signin.component.html
+++ b/src/app/signin/signin.component.html
@@ -1,17 +1,30 @@
 <h2>Sign In -Using Template Driven Forms</h2>
-<form>
+<form #signInForm="ngForm" (ngSubmit)="loginUser(signInForm);">
     <div class="form-group">
       <label for="exampleInputEmail1">Email address</label>
-      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-      <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" name="emailAddressField" ngModel>
+      <!-- <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> -->
     </div>
     <div class="form-group">
       <label for="exampleInputPassword1">Password</label>
-      <input type="password" class="form-control" id="exampleInputPassword1">
+      <input type="password" class="form-control" id="exampleInputPassword1" name="passwordField" ngModel>
     </div>
     <div class="form-group form-check">
-      <input type="checkbox" class="form-check-input" id="exampleCheck1">
+      <input type="checkbox" class="form-check-input" id="exampleCheck1" name="termsField" ngModel>
       <label class="form-check-label" for="exampleCheck1">Agree to terms</label>
+    </div>
+    <div class="form-group">
+        <input type="radio" class="form-check-input" id="genderField" value="male" name="genderField" ngModel>
+        <label class="form-check-label" for="exampleCheck1">Male</label>
+    </div>
+    <div class="form-group">
+        <input type="radio" class="form-check-input" id="genderField" value="female" name="genderField" ngModel>
+        <label class="form-check-label" for="exampleCheck1">Female</label>
+    </div>
+    <div class="form-group">
+        <label for="exampleInputEmail1">Email address</label>
+        <textarea class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" name="notesField" ngModel>
+        </textarea>
     </div>
     <button type="submit" class="btn btn-primary">Submit</button>
   </form>
