--- a/src/app/checkout/checkout.component.html
+++ b/src/app/checkout/checkout.component.html
@@ -18,6 +18,32 @@
             <span *ngIf="checkoutForm.get('quantity').touched && checkoutForm.get('quantity').hasError('required')">Enter Quantity</span>
           </div>
         </div>
+
+         <!--
+        <div class="form-group row">
+            <label for="inputPassword3" class="col-sm-2 col-form-label">Items</label>
+            <div class="col-sm-10" formArrayName="items">
+                <div *ngFor="let item of checkoutForm.controls.items['controls']; let i=index">
+                   <input type="text" class="form-control"  [formControlName]="i" id="task{{i}}">
+                </div>
+            </div>
+          </div>
+         -->
+       
+        <div class="form-group row">
+            <label for="items" class="col-sm-2 col-form-label">Items</label>
+            <div class="col-sm-10" formArrayName="items">
+                <div *ngFor="let item of checkoutForm.controls.items['controls']; let i=index" [formGroupName]="i">
+                    <a [routerLink] (click)="removeItem(i)">remove</a> 
+                    <input type="text" class="form-control"  formControlName="itemId" id="task{{i}}">
+                    <input type="text" class="form-control"  formControlName="itemName" id="task{{i}}">
+                    <input type="text" class="form-control"  formControlName="itemDesc" id="task{{i}}">
+                    <input type="checkbox"  formControlName="itemDone"> Mark as Done
+                </div>
+            </div>
+          </div>
+       
+
         <div class="form-group row">
           <div class="col-sm-10 offset-sm-2">
             <div class="form-check">
