--- a/src/app/checkout/checkout.component.html
+++ b/src/app/checkout/checkout.component.html
@@ -34,7 +34,7 @@
             <label for="items" class="col-sm-2 col-form-label">Items</label>
             <div class="col-sm-10" formArrayName="items">
                 <div *ngFor="let item of checkoutForm.controls.items['controls']; let i=index" [formGroupName]="i">
-                    <a [routerLink] (click)="removeItem(i)">remove</a> 
+                    <a [routerLink] (click)="removeItem(i);">Remove Item</a> 
                     <input type="text" class="form-control"  formControlName="itemId" id="task{{i}}">
                     <input type="text" class="form-control"  formControlName="itemName" id="task{{i}}">
                     <input type="text" class="form-control"  formControlName="itemDesc" id="task{{i}}">
@@ -58,6 +58,7 @@
           <div class="col-sm-10">
             <button type="submit" class="btn btn-primary" [disabled]="!checkoutForm.valid">Checkout</button>
             <button type="submit" class="btn btn-link" (click)="resetForm();">Clear</button>
+            <button type="submit" class="btn btn-link" (click)="addNewItem();">Add Row</button>
           </div>
         </div>
       </form>
